--- a/src/components/ListBox/ListBox.css
+++ b/src/components/ListBox/ListBox.css
@@ -28,3 +28,12 @@
   display: inline-block;
   margin-right: 15px;
 }
+
+.numAplDiv {
+  margin-bottom: 20px;
+}
+
+.numAplDiv .value {
+  margin-left: 21px;
+  margin-right: 15px;
+}
